--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Sistema</title>
   </head>
   <body class="body">
-    <h1>Sistema Obligaciónes Diarias</h1>
+    <h1>Sistema Obligaciones Diarias</h1>
     <div class="container">
       <div class="row">
         <div class="col-6">
